# Qt5Extra

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/animatedwizard/: CMakeLists.txt
examples/codeeditor/: CMakeLists.txt  codeeditor.cpp  codeeditor.qrc  jsedit.h  main.cpp
examples/codeeditor/resources/: application.json  cson.json  json.json  sql.json  xml.json
examples/colorpalette/: CMakeLists.txt  widget.h
examples/colorwidgets/: CMakeLists.txt
examples/configwidget/: CMakeLists.txt  qconfigwidget.h  qconfigwizard.h
examples/curvedtext/: CMakeLists.txt  qtradiusesmodel.h  widget.cpp  widget.h
examples/indicators/: CMakeLists.txt  widget.cpp
examples/itemdelegatedemo/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  treemodel.h
examples/itemviewdemo/: CMakeLists.txt  demowidget.cpp  demowidget.h  main.cpp  qoptionmodel.h
examples/messagelog/: CMakeLists.txt
examples/metainvoke/: CMakeLists.txt  controller.h
examples/multiprogress/: CMakeLists.txt
examples/objectmapper/: CMakeLists.txt  dialog.h
examples/objecttree/: CMakeLists.txt
examples/objectviewer/: CMakeLists.txt  dialog.h
examples/overlay/: CMakeLists.txt
examples/overview/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
examples/screenlayout/: CMakeLists.txt  controller.cpp  controller.h  main.cpp
examples/spellchecking/: CMakeLists.txt  application.json  main.cpp  spellchecking.qrc  spellchecksettings.cpp  spellchecksettings.h  widget.cpp  widget.h
examples/spinboxes/: CMakeLists.txt  demowidget.cpp  demowidget.h
examples/sqlutils/: CMakeLists.txt  qtsqlitembrowser.cpp  qtsqlitembrowser.h
examples/treeproxymodel/: CMakeLists.txt
examples/usercarddemo/: CMakeLists.txt  main.cpp  usercarddemo.qrc  widget.cpp  widget.h
examples/variantmodel/: CMakeLists.txt
examples/widgetdelegatedemo/: CMakeLists.txt  previewlabel.cpp  qtfilelistmodel.cpp  qtfilelistmodel.h  widget.cpp  widget.h
plugins/: CMakeLists.txt
plugins/langdetect/: CMakeLists.txt
plugins/langdetect/cld2plugin/: CMakeLists.txt  cld2langdetector.cpp  cld2langdetector.h  cld2plugin.cpp  cld2plugin.h
plugins/modelexporters/: CMakeLists.txt
plugins/modelexporters/csvexporter/: CMakeLists.txt  qtcsvexportplugin.cpp
plugins/modelexporters/excelexporter/: CMakeLists.txt  qtexcelexporterplugin.cpp
plugins/modelexporters/htmlexporter/: CMakeLists.txt
plugins/modelexporters/jsonexporter/: CMakeLists.txt
plugins/modelexporters/xmlexporter/: CMakeLists.txt
plugins/spellcheckers/: CMakeLists.txt
plugins/spellcheckers/enchantbackend/: CMakeLists.txt  enchantbackend.cpp  enchantbackend.h  enchantbackend.json  enchantplugin.cpp  enchantplugin.h
plugins/spellcheckers/hunspellbackend/: CMakeLists.txt  hunspellbackend.cpp  hunspellbackend.h  hunspellbackend.json  hunspellplugin.cpp  hunspellplugin.h
qtcoreextra/: CMakeLists.txt
qtcoreextra/include/: QtObjectWatcher
qtcoreextra/src/: objectwatcher.h  qtcoreextra.h  qtglobalextra.h  qtjsonmapper.cpp  qtjsonmapper.h  qtjsonsettingsformat.h  qtmemorypool.h  qtmethodinvoker.cpp  qtmethodinvoker.h  qtobjectmapper.h  qtobjectwatcher.cpp  qtobjectwatcher.h  qtresource.cpp  qtresource.h  qtsettingsmapper.h  qtxmlmapper.cpp
qtextraaux/: CMakeLists.txt
qtextraaux/include/: AlgExt  CacheLine  CacheMap  FlatMap  IndexRange  LRUCache  Qt5StdHashSupport
qtextraaux/src/: algext.h  cacheline.h  cachemap.h  contains.h  filter_reduce.h  flatmap.h  indexrange.h  lrucache.h  stdhash_support.h
qtgeometry/: CMakeLists.txt
qtgeometry/include/: QtGeometry  QtGeometryAlgorithms  QtPolygonRounder  QtRectLayouts
qtgeometry/src/: distances.h  qtgeometry.h  qtgeometryalgorithms.cpp  qtgeometryalgorithms.h  qtpolygonrounder.cpp  qtpolygonrounder.h  qtrectlayouts.h  rectlayouts.h
qtitemviewsextra/: CMakeLists.txt  qtitemviewsextra.qrc
qtitemviewsextra/include/: QtActionItemDelegate  QtCachingProxyModel  QtCheckableProxyModel  QtColumnProxyModel  QtComboBoxItemDelegate  QtCompositeProxyModel  QtCustomHeaderView  QtEnumListModel  QtItemFilter  QtItemMapper  QtItemModelUtility  QtItemViewController  QtItemViewNavigator  QtItemViewsExtra  QtItemWidget  QtItemWidgetDelegate  QtObjectTreeModel  QtRichTextItemDelegate  QtTableModelExporter  QtTableModelExporterDialog  QtTableModelExporterFactory  QtTableModelExporterPlugin  QtTextCodecModel  QtTreeProxyModel  QtVariantItemDelegate  QtVariantListModel  QtVariantTypeDelegate
qtitemviewsextra/src/: qtitemviewsextra.h
qtlayoutsextra/: CMakeLists.txt
qtlayoutsextra/include/: QtAnimatedLayout  QtAspectRatioLayout  QtFlowLayout  QtGridPageLayout  QtLayoutUtils  QtLayoutsExtra  QtRibbonLayout  QtScreenLayout
qtlayoutsextra/src/: animatedlayout.cpp  animatedlayout.h  aspectratiolayout.cpp  aspectratiolayout.h  flowlayout.cpp  flowlayout.h  gridpagelayout.cpp  gridpagelayout.h  gridpagelayout_p.cpp  gridpagelayout_p.h  layoutinternals.cpp  layoutinternals.h  layoututils.cpp  layoututils.h  qtanimatedlayout.cpp  qtanimatedlayout.h  qtaspectratiolayout.cpp  qtaspectratiolayout.h  qtflowlayout.cpp  qtflowlayout.h  qtgridpagelayout.cpp  qtgridpagelayout.h  qtgridpagelayout_p.cpp  qtgridpagelayout_p.h  qtlayoutsextra.h  qtlayoututils.cpp  qtlayoututils.h  qtribbonlayout.cpp  qtribbonlayout.h  qtscreenlayout.cpp  qtscreenlayout.h  ribbonlayout.cpp  ribbonlayout.h
qtpluginsextra/: CMakeLists.txt
qtpluginsextra/src/: qtplugininterface.h  qtpluginmanager.cpp  qtpluginmanager.h  qtpluginmanagerdialog.cpp  qtpluginmanagerdialog.h  qtpluginmetadata.h  qtpluginpropertymodel.cpp  qtpluginpropertymodel.h  qtpluginsextra.h  qtplugintreeview.h
qtpropertybrowser/: CMakeLists.txt
qtpropertybrowser/include/: QtPropertyBrowserExtra
qtpropertybrowser/src/: qtattributeresource.cpp  (+15 more)
qtspellchecking/: CMakeLists.txt
qtsqlextra/: CMakeLists.txt
qtsqlwidgets/: CMakeLists.txt
qtsqlwidgets/src/: qtsqlconnectiondialog.cpp  qtsqlconnectiondialog.h  qtsqlconnectionedit.cpp  qtsqlconnectionedit.h  qtsqlitemtreemodel.h  qtsqlwidgets.h
qttextextra/: CMakeLists.txt
qtwidgetsextra/: CMakeLists.txt  qtwidgetsextra.qrc
(+265 files in other folders)
